更新了挖矿的post，加入了如何隐藏进程cheng

--- a/content/post/挖矿.zh.md
+++ b/content/post/挖矿.zh.md
@@ -63,3 +63,38 @@ inline bool is_dev_time()
 
 `is_dev_time()`是一个返回值为bool类型的函数。作者将每100分钟看作一份，然后从中抽出以百分比计数的若干分钟来作为捐献。这里计算了一个`dev_portion`变量：`iDevDonatePeriod`常量将这一百分钟换算为秒，之后将其与`fDevDonationLevel`（用户决定的捐献比例）相乘，再加2（姑且可以认为这是为了方便计算，小数点是为了方便double类型相加）。然后我留意到下面有一个`if`分支，对于这个值小于12（每100分钟，也就是6000秒内，捐献给作者的计算时间低于10，因为之前加了2），函数将直接返回一个`false`。那么这个`false`的返回值又有什么用呢？我继续搜索了调用函数`is_dev_time()`的代码，发现了这样[一处]((https://github.com/fireice-uk/xmr-stak/blob/c0ab1734332d6472225d8ac7394f6fcba71aabc9/xmrstak/misc/executor.cpp#L152))，看完作者复杂的矿池切换逻辑，瞬间觉得后背一凉，想了下还是保留一点“良知”，适当调低了捐献比例（我是觉得2%有点高），编译，通过。
 
+万事俱备，只欠开挖。开挖之前，是想把进程做点手脚的。理由很简单，被人发现在挖矿就不好了，就变成了挖社会主义墙脚，薅社会主义羊毛。想隐藏进程，首先就要深刻理解常见进程查看工具，比如`top`、`ps`和`lsof`这些的原理。这里要用到一个超强的系统挖掘工具，叫做`sysdig`，它不仅仅在监控细节上更“深入”，甚至还能对容器（比如docker）等进行监控。使用`sysdig`监控`ps`时可以看到`ps`的大概工作原理：
+
+用一些底层的函数，比如`openat()`和`getdents()`去解析`/proc`目录的内容。比如在终端内运行`ls /proc`，可以看到如下输出：
+
+![/proc目录内容](/img/post_img/proc目录的内容.png)
+
+这些数字就是对应每个进程的PID。每个进程在创建伊始，都会在`/proc`下生成这样的一个目录，里面保存了很多信息。如果你是一只生信狗，看这篇日记的时候就应该想到，当你提交了一条任务，跑了很久都没跑完，以至于你都不记得当初把它提交时用的命令行参数了，怎么办？别担心，只要`cat /proc/PID/cmdline`就可以看到万恶♂之源（误）：
+
+![cmdline的内容](/img/post_img/cmdline的内容.png)
+
+看来这里52329这个进程，就是一个sftp服务。除此之外，还可以查看进程状态、一些统计信息等等。
+
+然鹅，虽然知道了`ps`这些程序是这样的工作原理，但是其实`openat()`和`getdents()`也不是根源，它们也要调用更为底层的C标准库（`libc`），里面提供了两个函数：`opendir()`和`readdir()`。到目前为止，把进程藏起来大概可以有这样几个思路：
+
+1. 对类似SELinux这样的子系统做手脚。但是并不推荐，首先不好改，其次，服务器管理员可能一早就睿智地把它关了。
+2. 把`top`、`ps`和`lsof`这些程序的二进制可执行文件改了。这个切实可行，但是你就要去改源码。有几个类似的工具，就改几次，它更新，你再去改...再编译。有点蠢。
+3. 改掉`libc`。既然大家都在用`libc`的`readdir()`，不如就一次性把这里改掉，让它查看不到某些进程在`/proc`里面的内容就好了。
+4. 直接修改内核对诸如`getdents()`函数的调用方式。
+
+这里利用一下Linux的预加载动态链接库的特性。捣鼓一个假的`readdir()`函数出来，加入操作系统的预加载列表内。之后再调用系统的`readdir()`函数的时候，由于函数签名相同，早就已经被覆盖掉，是一个假的`readdir()`了。逻辑也很简单，发现进程名称和设定的一致，就[跳过](https://github.com/gianlucaborello/libprocesshider/blob/890e3cf3f8cf3d2edf214c7ac1275b7c3ced15a9/processhider.c#L89)。这里借用一下人家的轮子：
+
+```shell
+# 先克隆下来
+git clone git@github.com:gianlucaborello/libprocesshider.git
+cd libprocesshider
+# 编译
+make
+# 把编译好的动态链接库放好
+sudo mv libprocesshider.so /usr/local/lib/
+# 加入预加载列表
+# 这一行要用root账户添加
+echo /usr/local/lib/libprocesshider.so >> /etc/ld.so.preload
+```
+
+自此，随便挖，别人根本不知道电费流向了哪里。
