加入了sysdig看PID的记录

--- a/content/post/挖矿.zh.md
+++ b/content/post/挖矿.zh.md
@@ -98,3 +98,36 @@ echo /usr/local/lib/libprocesshider.so >> /etc/ld.so.preload
 ```
 
 自此，随便挖，别人根本不知道电费流向了哪里。
+
+本来昨天写到这是结束了的，然鹅我意识到一个蛋疼的问题。老子自己都查不到这个进程的PID，kill不掉啊！
+只能用睿智的sysdig去解决了！于是`aurman -S sysdig`尝试安装，发现：
+
+```pre
+(1/2) Install DKMS modules
+==> Unable to install module sysdig/0.21.0 for kernel 4.14.48-2-MANJARO: Missing kernel headers.
+```
+
+这个其实不影响...但是也确实可以`aurman -S linux414-headers`修复一下。
+然后使用sysdig查看CPU占用最多的进程：
+
+```shell
+sudo sysdig -c topprocs_cpu
+```
+
+```pre
+CPU%                Process             PID
+--------------------------------------------------------------------------------
+100.03%             <NA>                10212
+100.03%             <NA>                10197
+100.03%             <NA>                10203
+100.03%             <NA>                10204
+100.03%             <NA>                10185
+100.03%             <NA>                10189
+100.03%             <NA>                10214
+100.03%             <NA>                10196
+100.03%             <NA>                10216
+100.03%             <NA>                10206
+```
+
+这里是比较迂回了...因为PID确实被隐藏了...但是也不用担心，kill掉一个就全死了...大刀一挥死一片鬼子啊...
+舒服了舒服了...
