加入了运行xmr时的内存出错解决方案

--- a/content/post/挖矿.zh.md
+++ b/content/post/挖矿.zh.md
@@ -63,6 +63,14 @@ inline bool is_dev_time()
 
 `is_dev_time()`是一个返回值为bool类型的函数。作者将每100分钟看作一份，然后从中抽出以百分比计数的若干分钟来作为捐献。这里计算了一个`dev_portion`变量：`iDevDonatePeriod`常量将这一百分钟换算为秒，之后将其与`fDevDonationLevel`（用户决定的捐献比例）相乘，再加2（姑且可以认为这是为了方便计算，小数点是为了方便double类型相加）。然后我留意到下面有一个`if`分支，对于这个值小于12（每100分钟，也就是6000秒内，捐献给作者的计算时间低于10，因为之前加了2），函数将直接返回一个`false`。那么这个`false`的返回值又有什么用呢？我继续搜索了调用函数`is_dev_time()`的代码，发现了这样[一处]((https://github.com/fireice-uk/xmr-stak/blob/c0ab1734332d6472225d8ac7394f6fcba71aabc9/xmrstak/misc/executor.cpp#L152))，看完作者复杂的矿池切换逻辑，瞬间觉得后背一凉，想了下还是保留一点“良知”，适当调低了捐献比例（我是觉得2%有点高），编译，通过。
 
+运行的时候，开始遇到了错误：
+
+```pre
+MEMORY ALLOC FAILED: mmap failed
+```
+
+这个好说，只要`sudo sysctl -w vm.nr_hugepages=128`就解决了。
+
 万事俱备，只欠开挖。开挖之前，是想把进程做点手脚的。理由很简单，被人发现在挖矿就不好了，就变成了挖社会主义墙脚，薅社会主义羊毛。想隐藏进程，首先就要深刻理解常见进程查看工具，比如`top`、`ps`和`lsof`这些的原理。这里要用到一个超强的系统挖掘工具，叫做`sysdig`，它不仅仅在监控细节上更“深入”，甚至还能对容器（比如docker）等进行监控。使用`sysdig`监控`ps`时可以看到`ps`的大概工作原理：
 
 用一些底层的函数，比如`openat()`和`getdents()`去解析`/proc`目录的内容。比如在终端内运行`ls /proc`，可以看到如下输出：
