--- a/content/project/系统发生树+基因相似度.zh.md
+++ b/content/project/系统发生树+基因相似度.zh.md
@@ -5,7 +5,7 @@ draft = true
 
 # Tags: can be used for filtering projects.
 # Example: `tags = ["machine-learning", "deep-learning"]`
-tags = ["可视化"]
+tags = ["数据可视化"]
 
 # Project summary to display on homepage.
 summary = ""
