--- a/content/post/挖矿.zh.md
+++ b/content/post/挖矿.zh.md
@@ -5,7 +5,7 @@ draft = false
 
 # Tags and categories
 # For example, use `tags = []` for no tags, or the form `tags = ["A Tag", "Another Tag"]` for one or more tags.
-tags = ['Block chain', 'Linux', 'Performance']
+tags = ['区块链', 'Linux']
 summary = ""
 
 # Featured image
