树算完了还没画，16S弄完OTU

--- a/content/project/16S流程重构建.zh.md
+++ b/content/project/16S流程重构建.zh.md
@@ -238,5 +238,57 @@ It took 539 secs to summarize 7527110 sequences.
 
 这里很明显[2, 11344]是正确的区间。进入下一步。
 
-## 第四部分：余下分析
+## 第四部分：去除无用序列
 
+*screenAlignments2RemoveLineage.batch* 的内容：
+
+```shell
+screen.seqs(fasta=LZW113_1.trim.contigs.good.unique.align, count=LZW113_1.trim.contigs.good.count_table, summary=LZW113_1.trim.contigs.good.unique.summary, start=2, end=11344, maxhomop=8, processors=20)
+summary.seqs(fasta=current, count=current)
+filter.seqs(fasta=LZW113_1.trim.contigs.good.unique.good.align, vertical=T, trump=.)
+unique.seqs(fasta=LZW113_1.trim.contigs.good.unique.good.filter.fasta, count=LZW113_1.trim.contigs.good.good.count_table)
+pre.cluster(fasta=LZW113_1.trim.contigs.good.unique.good.filter.unique.fasta, count=LZW113_1.trim.contigs.good.unique.good.filter.count_table, diffs=3)
+chimera.vsearch(fasta=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.fasta, count=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.count_table, dereplicate=t)
+remove.seqs(fasta=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.fasta, accnos=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.denovo.vsearch.accnos)
+summary.seqs(fasta=current, count=current)
+classify.seqs(fasta=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.pick.fasta, count=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.denovo.vsearch.pick.count_table, reference=silva.nr_v132.align, taxonomy=silva.nr_v132.tax, cutoff=80, iters=1000)
+remove.lineage(fasta=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.pick.fasta, count=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.denovo.vsearch.pick.count_table, taxonomy=LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.pick.nr_v132.wang.taxonomy, taxon=Chloroplast-Mitochondria-unknown-Eukaryota)
+summary.tax(taxonomy=current, count=current)
+```
+
+这其中，`screen.seqs()`的`start`和`end`参数以及`pre.cluster()`的`diff`参数（**每100bp允许一个错配**）应该根据alignmnets的统计结果来确定。另外要保证**有vsearch预先安装好**（加入PATH变量，可直接调用）。在`remove.lineage()`中，由于**古细菌也是我们关注的对象，因此不予去除**；但是线粒体、叶绿体等等要去掉。
+运行过程中，在`classify.seqs()`步骤可能会看到如下警告信息：
+
+```pre
+[WARNING]: FCAVD1Y_1_2108_24941_22154 could not be classified. You can use the remove.lineage command with taxon=unknown; to remove such sequences.
+```
+
+不必担心，我们在接下来的确就是这样做的。
+
+## 插曲：重命名
+
+流程进行到这里，mothur为中间结果自动添加的文件名前缀已经很冗长，为了方便接下来从构建OTU开始的分析，将关键的结果文件重命名为较短的形式比较方便。
+
+*rename.batch* 的内容：
+
+```shell
+system(cp LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.pick.nr_v132.wang.pick.taxonomy LZW113_1.final.taxonomy)
+system(cp LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.fasta LZW113_1.final.fasta)
+system(cp LZW113_1.trim.contigs.good.unique.good.filter.unique.precluster.denovo.vsearch.pick.pick.count_table LZW113_1.final.count_table)
+```
+
+这样，*LZW113_1.final.taxonomy* 、*LZW113_1.final.fasta* 和*LZW113_1.final.count_table* 算作是**所有预处理都进行完毕**的数据了，重命名之后文件名很短，可以很方便传入OTU及其下游的分析。
+
+## OTU分析
+
+*OTU.batch* 的内容：
+
+```shell
+cluster.split(fasta=LZW113_1.final.fasta, count=LZW113_1.final.count_table, taxonomy=LZW113_1.final.taxonomy, splitmethod=classify, taxlevel=4, cutoff=0.20, processors=50)
+make.shared(list=LZW113_1.final.opti_mcc.list, count=LZW113_1.final.count_table, label=0.20)
+classify.otu(list=LZW113_1.final.opti_mcc.list, count=LZW113_1.final.count_table, taxonomy=LZW113_1.final.taxonomy, label=0.20)
+```
+
+`taxlevel=4`是指定使用上面的分类信息到第四级（界门纲目科属种的目），`cutoff=0.20`这个算是经验值了。
+
+选择这里作为断点，也是因为形成OTU是比较关键的承上启下的一步，如果参数有必要调节（尝试性的分析）则比较方便。
