--- a/content/project/系统发生树+基因相似度.zh.md
+++ b/content/project/系统发生树+基因相似度.zh.md
@@ -92,3 +92,94 @@ for line in `cat accList`; do efetch -db nucleotide -id $line -format gb > $line
 ![](/img/post_img/成功efetch之后的目录内容.png)
 
 舒服了。
+
+前段时间集中怼16S流程，而且服务器挂了不能high起来（借用朋友的server去跑16S已经是捉襟见肘了，人家还有自己的数据要分析呢），所以这边暂时搁置了一下（正好那边的思考也比较集中）。
+现在16S的流程基本成形了，赶紧回来继续怼。邱岚已经给了我完整的表格。
+
+首先，这里面有一个比较特殊的情况。*Dehalobacter restrictus PER-K23*这个strain是没有complete genome的，那么其Rdase gene与其他的相似度肯定就凉凉了（参考序列拿不到），但是也打算把它绘制在树里面，它的5S/16S/23S完整序列还是有分别提供的，那就还是抓下来。
+
+策略上，为了更有说服力，采用比较经典的做法，先将3个核糖体DNA序列各自用ClustalW比对齐了再合并。那么考虑到上面这个特殊情况，我决定搞3个list分别去拿序列。
+
+拿到一整个目录的gbk文件之后，搞了一个[python脚本](https://github.com/adina/tutorial-ngs-2014/blob/master/ncbi/parse-genbank.py)（有改动）来从genbank拆16S序列：
+
+```python
+#!/opt/anaconda/bin/python
+import sys 
+from Bio import SeqIO
+from Bio.SeqRecord import SeqRecord
+
+
+genome=SeqIO.read(sys.argv[1], 'genbank')
+
+for record in list(SeqIO.parse(sys.argv[1], 'genbank')):
+    org = record.annotations["source"]
+    for feat in genome.features:
+        if feat.type == "rRNA":
+            if '5S' in feat.qualifiers['product'][0]:#or '16S ribosomal' for strict match
+                print('>' + sys.argv[1].split('.')[0] + ' '+ org + ' '+ '5S rRNA gene' )
+                print(feat.extract(genome.seq))
+                break
+```
+
+基因可能有多拷贝，但是无论如何strain之间的差异一定比strain自身不同拷贝的差异要大，所以这里只用所见的第一个拷贝的序列参与计算。
+
+然后注意到一个问题，不知道从什么时期开始，也许是为了加快页面访问速度，**NCBI对太长的genbank记录进行了省略，页面上方会有一个“Due to the size of this record, annotated features are not shown by default. Use "Customize view" section to change the display”这样的提示**。
+
+这样的话，使用上面的shell脚本批量运行efetch看来是**无论如何也抓不到完整的genbank文件**的（当然还可以输出genbank table，但是这个解析起来麻烦，就算了）。
+
+### 直接从URL获取序列
+
+开始我的脚本是这样写的：
+
+```shell
+for line in `cat acc5`; do aria2c http://www.ncbi.nlm.nih.gov/sviewer/viewer.fcgi?db=nuccore&dopt=gbwithparts&sendto=on&id=$line -o $line.gbk; done
+```
+
+然后就发现自己被NCBI KO了，下载下来的其实是这玩意：
+
+![](/img/post_img/ncbi封了访问.png)
+
+大概是因为aria2太暴力，同时的连接数太多了吧。
+于是乖乖地换回wget去下载，虽然慢一点，但是文件不大也不多，就忍了。迟点一定要用biopython封装一个方便的。
+
+```shell
+for acc in `cat acc5`; do wget -O "${acc}.gbk" "http://www.ncbi.nlm.nih.gov/sviewer/viewer.fcgi?db=nuccore&dopt=gbwithparts&sendto=on&id=$acc"; done
+```
+
+将5S序列从genbank内拆出来：
+
+```shell
+for x in *.gbk; do ./parse-genbank.py $x > $x.5S.fa; done
+```
+
+## 多重比对
+
+数据量太小，暂时没有必要本地配置一个ClustalW，迟点有需求再说吧。
+
+拿到上面的序列之后，[去算一个phylip格式的ClustalW比对结果](https://www.genome.jp/tools-bin/clustalw)出来：
+
+![](/img/post_img/在线clusterw.png)
+
+16S和23S的序列如法炮制。
+
+拿到3个fasta格式的比对结果之后，使用一个[小工具](https://github.com/nylander/catfasta2phyml)来将其合并为单个phylip格式的文件：
+
+```shell
+./catfasta2phyml.pl *.fasta > merged.phy
+```
+
+然后用最新的[TrimAl](http://phylemon2.bioinfo.cipf.es/)去撸掉应该去掉的gapped sites。策略选择`-noallgaps`之后发现没变化，想想看确实如此，我选的算法是ClusterW，应该没有全部是gap的位点。然后又用`-automated1`来了一遍，发现自动的策略还是比较好的，最后拿到一个nogap.phy。
+
+## 使用PhyML构建进化树
+
+直接下载一个binary，然后：
+
+```shell
+nohup ./PhyML -i nogap.phy -b 1000 -d nt -f m -v e -a e -s BEST -o tlr --r_seed 1013 --quiet > phyml.logs &
+```
+
+其中，输入只能是phy文件（见上文的处理），`-b`指定了bootstrap次数为1000（经验值），`-d nt`指定了输入为核酸序列，`-f m`指定了使用最大似然法计算碱基频率， `-v`和`-a`均使用`e`来指定使用最大似然估计值，`-s BEST`表示选择NNI和SPR最好的结果（会慢，详见[官方文档](http://www.atgc-montpellier.fr/download/papers/phyml_manual_2012.pdf)吧），`-o tlr`表示应用全部优化（慢），`--r_seed 1013`固定一个随机数seed，保证结果可重复，`--quiet`除了减少冗余输出，还可以防止程序占用内存较高时进程被转为S或D状态（我的猜测）。
+
+并行版本需要给作者写信去要源码从头编译，懒得搞了，数据不是很大，应该还好吧。
+
+## 先来一幅树看看
