修正一些内容

--- a/content/project/16S流程重构建.zh.md
+++ b/content/project/16S流程重构建.zh.md
@@ -35,7 +35,7 @@ caption = ""
 脚本start2SummaryContigs.batch的内容：
 
 ```shell
-make.contigs(ffastq=LZW113_1.fastq, rfastq=LZW113_2.fastq, oligos=oligos.txt, bdiffs=1, checkorient=t, processors=56)
+make.contigs(ffastq=LZW113_1.fastq, rfastq=LZW113_2.fastq, oligos=oligos.txt, pdiffs=6, bdiffs=1, checkorient=t, processors=56)
 summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
 ```
 
@@ -48,88 +48,10 @@ summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
 5. 这一步中，可以直接设置`allfiles=t`来将完成demux的序列分开文件输出。虽然mothur有groups文件，但是这比较方便后期直接针对单样本进行分析。本例中不开启这个参数，本质上后期也可以`split.groups()`来完成这个操作。
 6. 有关`oligos`参数的问题。
 
-    序列比对这个工作里面有一个常识，对于目前最普遍的Illumina系列产品为代表的二代测序而言，通常大家能够容忍的程度是6%，也就是，pair-ends测序，100个碱基内希望见到不超过6个碱基的错误。我们的barcode有多长？8个碱基。这里面如果一个错误都不允许，我觉得有点苛刻，那么1个碱基的错配，我认为是可以接受的。至于primers，我们用的测序接头有多长？才19个碱基啊！好吧我算双端是19 * 2 = 38（其实只能看到3'接头，已经算多了，不要紧），38 * 0.06 = 2.28个碱基，这样算起来，指定2个错配（`pdiffs=2`）已经很过分了。
-
-    所以我就用`pdiffs=2`尝试了一次，发现：
-
-    ```pre
-    mothur > summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
-
-    Using 56 processors.
-
-            Start	End	NBases	Ambigs	Polymer	NumSeqs
-    Minimum:	1	312	312	0	3	1
-    2.5%-tile:	1	371	371	0	4	79
-    25%-tile:	1	374	374	0	4	781
-    Median: 	1	375	375	0	5	1561
-    75%-tile:	1	376	376	0	6	2341
-    97.5%-tile:	1	378	378	2	7	3043
-    Maximum:	1	409	409	7	9	3121
-    Mean:	1	374	374	0	4
-    # of Seqs:	3121
-
-    It took 1 secs to summarize 3121 sequences.
-    ```
-
-    纳尼？只保留了3121条序列。数据都没了？
-
-    这个时候我做了一些思考：
-
-    原流程内`pdiffs=4`，这意味着什么？我们都知道，Illumina测序使用的接头是用blast算法千挑万选得到的、保证在各个物种内没有相似序列并且长度合适的短序列，但是**4个碱基的错配，已经无法保证其唯一性**，也就是说，我们的16S rDNA测序结果中会有大量相似的序列被匹配出来。
-
-    那么这些序列会被mothur一一剔除吗？不。恰恰相反，mothur会认为这部分序列才是“有效序列”，从而从这部分序列中将“疑似为接头序列”的部分切掉，保留剩余的部分，且只输出这种reads。也就是说，使用原流程去分析，数据中所有不包含“与接头足够相似（错配在4个以内）”的序列的reads都被干掉了。**造成浪费的同时，其实引入了极大的bias，已经是错误的分析了**。经过思考，有了这样的假设，我认为：
-
-    应该在`oligos`参数指向的文件中（本例为oligos.txt）[剔除primers行](https://www.mothur.org/wiki/Oligos_File)，并且`make.configs()`中不再需要指定`pdiffs`参数（允许的primers错配碱基数）。因为数据已经为clean data，如果不是，也推荐用fastp去clean，而不是用mothur（只考虑质量数和接头序列两个特征，往往是不足够的，也没有详细的可视化报告）。
-
-    那么具体实施起来，使用在`oligos`参数指向的文件中保留primers行，并且使用`pdiffs`参数“再去一次接头”会导致什么呢？我做了一系列的小实验。
-    先看用mothur再去一次primers的统计结果（按照原来的`pdiffs=4`)：
-
-    ```pre
-    mothur > summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
-
-    Using 56 processors.
-
-            Start	End	NBases	Ambigs	Polymer	NumSeqs
-    Minimum:	1	181	181	0	3	1
-    2.5%-tile:	1	371	371	0	4	200724
-    25%-tile:	1	374	374	0	4	2007236
-    Median: 	1	376	376	0	5	4014471
-    75%-tile:	1	376	376	0	5	6021706
-    97.5%-tile:	1	379	379	2	7	7828217
-    Maximum:	1	441	441	47	10	8028940
-    Mean:	1	375	375	0	4
-    # of Seqs:	8028940
-
-    It took 41 secs to summarize 8028940 sequences.
-    ```
-
-    注意这里面的8028940，接下来我剔除primers行，以及去掉`pdiffs`参数（其实mothur没有检测到primers行就可以了，这个去不去掉都无所谓），再跑一次：
-
-    ```pre
-    mothur > summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
-
-    Using 56 processors.
-
-            Start	End	NBases	Ambigs	Polymer	NumSeqs
-    Minimum:	1	210	210	0	3	1
-    2.5%-tile:	1	414	414	0	4	208590
-    25%-tile:	1	417	417	0	4	2085899
-    Median: 	1	419	419	0	5	4171798
-    75%-tile:	1	419	419	0	5	6257697
-    97.5%-tile:	1	422	422	2	7	8135006
-    Maximum:	1	484	484	58	10	8343595
-    Mean:	1	418	418	0	4
-    # of Seqs:	8343595
-
-    It took 42 secs to summarize 8343595 sequences.
-    ```
-
-    现在保留了8343595条序列。8343595 - 8028940 = 314655条序列，也就是说，这个错误的设计，**浪费了314655条高质量序列，且造成了严重了bias**。
-
-    看到这里，也许会有疑问：**测序末端质量低，难道不应该对primers容忍多点吗？**
+    {{% alert warning %}}
+此处我此前的理解有误，要多谢志伟师兄更正。`oligos`文件给出的primers是扩增引物，而并非测序的adapters。对于目前最普遍的Illumina系列产品为代表的二代测序而言，通常大家能够容忍的程度是6%，也就是，pair-ends测序，100个碱基内希望见到不超过6个碱基的错误。我们扩增V45区域使用的引物对是*GTGCCAGCMGCCGCGGTAA* 和*CCCCGYCAATTCMTTTRAGT* ，其中有**4**个简并碱基，而primers总长度是19 * 2 = 38，38 * 0.06 = 2.28个碱基，这样算多指定2个错配不过分。因此最后决定设置`pdiffs=6`。
+    {{% /alert %}}
     
-    没错，我也考虑到了这个问题，然而公司的cleaning还算是相当负责了（也和他们的程序的暴力逻辑有关，见到接头或者低质量序列，直接成对的reads全杀掉），**我手动用`grep`检查过，干干净净**...
-
 那么，流程的第一部分大概就这样。之所以选择在这里截断流程一次，是因为summary之后需要根据统计得到的reads的长度分布去修改下一阶段使用的脚本内的参数（比如`maxlength`）。
     
 使用时，可以比如`nohup mothur start2SummaryContigs.batch > step1.log &`这样。
@@ -289,6 +211,6 @@ make.shared(list=LZW113_1.final.opti_mcc.list, count=LZW113_1.final.count_table,
 classify.otu(list=LZW113_1.final.opti_mcc.list, count=LZW113_1.final.count_table, taxonomy=LZW113_1.final.taxonomy, label=0.20)
 ```
 
-`taxlevel=4`是指定使用上面的分类信息到第四级（界门纲目科属种的目），`cutoff=0.20`这个算是经验值了。
+`taxlevel=4`是指定使用上面的分类信息到第四级（界门纲目科属种的目），`cutoff`这个值很关键，mothur会只读取distance小于这个值的记录参与计算，如果太高，计算的时候生成的临时文件太大，会很吃硬盘资源（动辄几T），没有这种必要，且容易因为硬盘空间不足而中断。
 
 选择这里作为断点，也是因为形成OTU是比较关键的承上启下的一步，如果参数有必要调节（尝试性的分析）则比较方便。
