明天汇报内容

--- a/content/project/系统发生树+基因相似度.zh.md
+++ b/content/project/系统发生树+基因相似度.zh.md
@@ -1,7 +1,7 @@
 +++
 title = "系统发生树与脱卤功能基因相似度联合可视化"
 date = 2018-07-10T14:21:16+08:00
-draft = true
+draft = false
 
 # Tags: can be used for filtering projects.
 # Example: `tags = ["machine-learning", "deep-learning"]`
@@ -182,4 +182,18 @@ nohup ./PhyML -i nogap.phy -b 1000 -d nt -f m -v e -a e -s BEST -o tlr --r_seed 
 
 并行版本需要给作者写信去要源码从头编译，懒得搞了，数据不是很大，应该还好吧。
 
+跑完树，得到`nogap.phy_phyml_boot_stats.txt` `nogap.phy_phyml_boot_trees.txt` `nogap.phy_phyml_stats.txt` `nogap.phy_phyml_tree.txt`这几个文件。
+
+
 ## 先来一幅树看看
+
+画树我是肯定用YGC的*ggtree* 了：
+
+```r
+aTree <- read.newick('nogap.phy_phyml_tree.txt')
+ggtree(aTree, layout="circular") + geom_tiplab(aes(angle=angle), color='blue')
+```
+
+图是这样的：
+
+![](/img/project_img/tree_draft.png)
