--- a/content/project/16S流程重构建.zh.md
+++ b/content/project/16S流程重构建.zh.md
@@ -35,6 +35,7 @@ caption = ""
 脚本start2SummaryContigs.batch的内容：
 
 ```shell
+# make.file(inputdir=., type=fastq, prefix=GF)
 make.contigs(ffastq=LZW113_1.fastq, rfastq=LZW113_2.fastq, oligos=oligos.txt, pdiffs=6, bdiffs=1, checkorient=t, processors=56)
 summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
 ```
