--- a/content/talk/20180813-地图、keystone网络图.zh.md
+++ b/content/talk/20180813-地图、keystone网络图.zh.md
@@ -67,8 +67,6 @@ aMap <- get_map(location = 'pazhou', zoom = 13)
 ggmap(aMap)
 ```
 
-![](/img/talk_img/google地图+琶洲+13级.png)
-
 上面的代码改一下：
 
 ```r
@@ -76,10 +74,8 @@ aMap <- get_map(location = 'guangzhouta', zoom = 15, maptype = 'satellite')
 ggmap(aMap)
 ```
 
-![](/img/talk_img/google地图+广州塔+15级+卫星图.png)
-
 ```r
 aMap <- get_map(location = 'pazhou', zoom = 13, maptype = 'hybrid')
 ```
 
-![](/img/talk_img/google地图+琶洲+13级+复合.png)
+> 这里去掉3副图（老师提醒还是遥感图比较适合research article)，这样原图也太大了，git管理起来很不方便，就去掉了~
