--- a/content/project/16S流程重构建.zh.md
+++ b/content/project/16S流程重构建.zh.md
@@ -49,9 +49,7 @@ summary.seqs(fasta=LZW113_1.trim.contigs.fasta)
 5. 这一步中，可以直接设置`allfiles=t`来将完成demux的序列分开文件输出。虽然mothur有groups文件，但是这比较方便后期直接针对单样本进行分析。本例中不开启这个参数，本质上后期也可以`split.groups()`来完成这个操作。
 6. 有关`oligos`参数的问题。
 
-    {{% alert warning %}}
-此处我此前的理解有误，要多谢志伟师兄更正。`oligos`文件给出的primers是扩增引物，而并非测序的adapters。对于目前最普遍的Illumina系列产品为代表的二代测序而言，通常大家能够容忍的程度是6%，也就是，pair-ends测序，100个碱基内希望见到不超过6个碱基的错误。我们扩增V45区域使用的引物对是*GTGCCAGCMGCCGCGGTAA* 和*CCCCGYCAATTCMTTTRAGT* ，其中有**4**个简并碱基，而primers总长度是19 * 2 = 38，38 * 0.06 = 2.28个碱基，这样算多指定2个错配不过分。因此最后决定设置`pdiffs=6`。
-    {{% /alert %}}
+> 此处我此前的理解有误，要多谢志伟师兄更正。`oligos`文件给出的primers是扩增引物，而并非测序的adapters。对于目前最普遍的Illumina系列产品为代表的二代测序而言，通常大家能够容忍的程度是6%，也就是，pair-ends测序，100个碱基内希望见到不超过6个碱基的错误。我们扩增V45区域使用的引物对是*GTGCCAGCMGCCGCGGTAA* 和*CCCCGYCAATTCMTTTRAGT* ，其中有**4**个简并碱基，而primers总长度是19 * 2 = 38，38 * 0.06 = 2.28个碱基，这样算多指定2个错配不过分。因此最后决定设置`pdiffs=6`。
     
 那么，流程的第一部分大概就这样。之所以选择在这里截断流程一次，是因为summary之后需要根据统计得到的reads的长度分布去修改下一阶段使用的脚本内的参数（比如`maxlength`）。
     
@@ -215,3 +213,6 @@ classify.otu(list=LZW113_1.final.opti_mcc.list, count=LZW113_1.final.count_table
 `taxlevel=4`是指定使用上面的分类信息到第四级（界门纲目科属种的目），`cutoff`这个值很关键，mothur会只读取distance小于这个值的记录参与计算，如果太高，计算的时候生成的临时文件太大，会很吃硬盘资源（动辄几T），没有这种必要，且容易因为硬盘空间不足而中断。
 
 选择这里作为断点，也是因为形成OTU是比较关键的承上启下的一步，如果参数有必要调节（尝试性的分析）则比较方便。
+
+make.biom(shared=final.tx.1.subsample.1.pick.shared, constaxonomy=final.tx.1.cons.taxonomy)
+biom convert -i GF.opti_mcc.0.03.biom -o table.from_biom_w_consensuslineage.txt --to-tsv --header-key taxonomy --output-metadata-id "ConsensusLineage" --table-type="OTU table"
