--- a/content/project/系统发生树+基因相似度.zh.md
+++ b/content/project/系统发生树+基因相似度.zh.md
@@ -197,3 +197,15 @@ ggtree(aTree, layout="circular") + geom_tiplab(aes(angle=angle), color='blue')
 图是这样的：
 
 ![](/img/project_img/tree_draft.png)
+
+## 比较这些strains的基因组
+
+先`for acc in `cat acc`; do wget -O "${acc}.fasta" "http://www.ncbi.nlm.nih.gov/sviewer/viewer.fcgi?db=nuccore&dopt=fasta&sendto=on&id=$acc"; done`，下载好全部的FASTA。
+
+合并成单个fasta文件*all.fasta* 。
+
+使用`makeblastdb -in all.fasta -dbtype nucl -parse_seqids`建库。
+
+
+
+
