--- a/content/project/系统发生树+基因相似度.zh.md
+++ b/content/project/系统发生树+基因相似度.zh.md
@@ -206,6 +206,9 @@ ggtree(aTree, layout="circular") + geom_tiplab(aes(angle=angle), color='blue')
 
 使用`makeblastdb -in all.fasta -dbtype nucl -parse_seqids`建库。
 
+自身比自身：
 
-
+```shell
+blastn -query all.fasta -task dc-megablast -db all.fasta -outfmt 7 -out fuck -num_threads 50 -best_hit_score_edge 0.1 -best_hit_overhang 0.1
+```
 
